--- a/MyDAL/HPC.DAL.csproj
+++ b/MyDAL/HPC.DAL.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.8.0.5</Version>
+    <Version>0.7.7</Version>
     <Authors>Meng.NET</Authors>
     <Company></Company>
     <Product>MyDAL</Product>
-    <Description>The fastest and best ORM lite on .NET Core for MySQL/SqlServer ! 
+    <Description>The fastest and best ORM lite on .NET Core for MySQL ! 
         -- 友好, 轻量, 极致性能, 无任何第三方依赖, 持续演进~~</Description>
     <Copyright>2018 Meng.NET</Copyright>
     <PackageLicenseUrl>http://www.apache.org/licenses/LICENSE-2.0</PackageLicenseUrl>
